# MyOpenGL

./: .gitignore  MyOpenGL.sln
MyOpenGL/: FragmentShader3D.glsl  Geometry2D.h  Geometry3D.h  MyOpenGL.vcxproj  MyOpenGL.vcxproj.filters  ShapeDrawer2D.h  ShapeDrawer3D.h  VertexShader2D.glsl  main.cpp
MyOpenGL/Project 1 Load obj file/: ShapeDrawer3D.h  VertexShader3D.glsl  main.cpp
MyOpenGL/Project 1 Three dimensional graph/: CMakeLists.txt  Geometry3D.h  ShapeDrawer3D.h  VertexShader3D.glsl  main.cpp
MyOpenGL/Project 2 Bezier curve/: FragmentShader2D.glsl  VertexShader2D.glsl  main.cpp
MyOpenGL/x64/Debug/: Geometry3D.h_84395DE78467A4CA.ifc.dt.d.json  Geometry3D.h_84395DE78467A4CA.ifc.dt.module.json  Geometry3D.h_84395DE78467A4CA.ifc.dt.module.json.command  MyOpenGL.exe.recipe  MyOpenGL.vcxproj.FileListAbsolute.txt  geometry3d.h.module.json  vc143.idb
MyOpenGL/x64/Debug/MyOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MyOpenGL.lastbuildstate  MyOpenGL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MyOpenGL/x64/Debug/MyOpenGL_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
MyOpenGL/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.command  std.ixx.ifc.dt.module.json.command
Reference/: CG Experiments - 2025.pptx  CG实验编程指南.pptx
